casey (10/21/02)
----------------------

added the following maps.
  Hohonora.map
  Hohonorb.map
  Nightmareb.map
  Poknowledge.map
  Potranquility.map
  Powar.map
  Solrotower.map

ratt (3 Oct 02)
----------------------

Fixed the max HP bug that was reporting more HP than you really had.

Released ShowEQ v4.2.15 in the file release section.  This is a 
current CVS snapshot as of this moment. (13:00 EST 3 Oct 02)

fee (floyd) (10/03/02)
----------------------
 + version 4.2.15
New Features:
  GuildMgr Class
     captures guilds2.dat from worldserver
     reads the regular eq client guilds2.dat (File->Reload Guilds File)
     dump a plain text list of guild id to guild tag (Debug->List/Dump Guild Info)
     filter and category support for spawnlists(regex on 'Guild:')
     map tip support
     spawnlog support, guild id added as last field in the output
Updates:
    random clean ups
    new guildlist structs
    updated charprofilestruct
    spells.h regenerated from current spells_en.txt
    applied patch[604874] - thanks to Bonkers D Bobcat (bonkersbobcat)

fee (10/09/02)
---------------------
 + updated charProfile struct, includes correct offset for AAXP

casey (08/29/02)
---------------------
 + Corrected the spelling of "Wizard" in interface.cpp

fee (floyd) (08/15/02)
----------------------
 + completion of Vexthal.map

fee (floyd) (08/14/02)
----------------------
Modifications:
 + fixed acinclude to parse the new QT_VERSION from qt3.0.5
   maintaining compatibility with qt2.3.2

fee (floyd) (08/08/02)
----------------------
Modifications:
 + version 4.2.14
 + changed default Arq seq give up in seqdef.xml to 256
 + up'd max Arq seq give up to 1024
 + added debug macro to prevent /tmp/coords from being written
 + added zone shortname for JaggedPine to zones.h
 + added new/updated maps for Jaggedpine, Bazaar, Surefall and Skyshrine

fee (floyd) (29/07/02)
----------------------
Modifications:
 + version 4.2.13